--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-sweetalert2": "^3.0.5",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
@@ -47,7 +49,7 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-trailing-spaces":"off"
+      "no-trailing-spaces": "off"
     },
     "overrides": [
       {
